--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "author": "Om Jagtap",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "mysql2": "^3.9.1",
+    "nodemon": "^3.0.3",
     "sequelize": "^6.37.0",
     "sequelize-cli": "^6.6.2"
   }
