--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "booking",
+  "name": "remainderservice",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js"
@@ -9,13 +8,17 @@
   "author": "Om Jagtap",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "mysql2": "^3.9.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
     "sequelize": "^6.37.0",
     "sequelize-cli": "^6.6.2"
-  }
+  },
+  "description": ""
 }
